@@ -18,7 +18,7 @@ def routablepageurl(context, page, url_name, *args, **kwargs):
     positional arguments and keyword arguments.
     """
     request = context['request']
-    base_url = page.relative_url(request.site)
+    base_url = page.relative_url(request.site, request)
     routed_url = page.reverse_subpage(url_name, args=args, kwargs=kwargs)
     if not base_url.endswith('/'):
         base_url += '/'
